@@ -23,6 +23,7 @@ version before doing an upgrade.)
  between cards (for e.g. inverses and three-sided cards).
 -automatically back up the database to XML on exit. The last five backups 
  are kept in .mnemosyne/backup.
+-support for multiple sound tags per field (requested by compiu).
 -removed a few rarely used options from the configuration dialog and
  placed them in .mnemosyne/config.py, a new file which can be used to
  set these and other rarely used options.
